[package]
name = "clymene"
description = "Process graphic files, merge them into an atlas file and provides data at a sensible format."
version = "0.1.0"
authors = ["Lucas Miranda <miranda.a.lucas@gmail.com>"]
license = "MIT"
homepage = "https://github.com/lucas-miranda/clymene"
repository = "https://github.com/lucas-miranda/clymene"
readme = "README.md"
keywords = ["atlas", "packer", "graphics", "aseprite"]
edition = "2018"

[dependencies]
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
toml = "0.5.8"
regex = "1.5.4"
directories = "3.0.2"
rand = "0.8.4"
colored = "2.0.0"
num-traits = "0.2.14"
image = "0.23.14"
tree_decorator = { git = "https://github.com/lucas-miranda/tree_decorator", version = "^0.1.2", features = ["no_log"] }
asefile = "0.3.1"
clap = "2.33.3"
num_cpus = "1.13.0"

[profile.dev]
opt-level = 0

[profile.dev.package.asefile]
opt-level = 3

[profile.release]
opt-level = 3
