[package]
name = "clymene"
description = "Process graphic files, merge them into an atlas file and provides data at a sensible format."
version = "0.1.0"
authors = ["Lucas Miranda <miranda.a.lucas@gmail.com>"]
license = "MIT"
homepage = "https://github.com/lucas-miranda/clymene"
repository = "https://github.com/lucas-miranda/clymene"
readme = "README.md"
keywords = ["atlas", "packer", "graphics", "aseprite"]
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
toml = "0.5.8"
regex = "1.5.5"
directories = "4.0.1"
rand = "0.8.5"
colored = "2.0.0"
num-traits = "0.2.14"
image = "0.24.1"
tree_decorator = { git = "https://github.com/lucas-miranda/tree_decorator", version = "^0.1.2", features = ["no_log"] }
asefile = "0.3.4"
clap = { version = "3.1.8", features = ["cargo", "default"] }
num_cpus = "1.13.1"

[profile.dev]
opt-level = 0

[profile.dev.package.asefile]
opt-level = 3

[profile.release]
opt-level = 3
